k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dart-scorer-service
spec:
  selector:
    app: dart-scorer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
